--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,31 @@
+body{
+    margin: 0px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: red;
 }
 
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color:beige;
+    margin: 0px;
+    padding: 10px;
+}
+
+#div-botoes{
+    margin-right: 30px;
+    display: flex;
+    gap: 40px;
+    flex-direction: row;
+    
+}
+
+img{
+    width: 80px;
+}
