--- a/docs/index.css
+++ b/docs/index.css
@@ -50,14 +50,40 @@ img{
 
 #section-video{
     background-color: var(--cinza);
+    height: 500px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    gap: 20px;
+    padding: 20px;
+}
+iframe{
+    border: black solid 8px;
+    border-radius: 5px;
 }
 
 #section-download{
+    padding-left: 60px;
+    padding-right: 60px;
     
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #section-logs{
+    padding-left: 60px;
+    padding-right: 60px;
     background-color: var(--cinza);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
 }
 
 #section-heuristica{
@@ -67,4 +93,15 @@ img{
 footer{
     background-color: #8a8a8a;
     height: 150px;
+}
+
+.icone{
+    width: 150px;
+    height: 150px;
+}
+
+button{
+    border: black solid 4px;
+    border-radius: 5px;
+    cursor: pointer;
 }
