--- a/docs/index.css
+++ b/docs/index.css
@@ -40,6 +40,7 @@ header{
 
 img{
     width: 80px;
+    
 }
 
 #section-title{
@@ -54,7 +55,15 @@ img{
     border-bottom: black solid 4px;
     
 }
+#section-telas-jogo{
+    display: flex;
+    flex-direction: column;
 
+    align-items: center;
+    justify-content: center;
+
+    padding: 20px;
+}
 
 #section-video{
     background-color: var(--cinza);
