--- a/docs/index.css
+++ b/docs/index.css
@@ -8,8 +8,14 @@ section{
 
 body{
     margin: 0px;
-    
+    overflow-x: hidden;
     font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    width: 100%;
+}
+
+html{
+    scroll-behavior: smooth;
+
 }
 
 h1{
@@ -22,7 +28,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    /* background-color:#d4d4d4; */
+    
     margin: 0px;
     padding: 10px;
     
@@ -53,6 +59,7 @@ img{
     background-size: cover;  
     border-top: black solid 4px;
     border-bottom: black solid 4px;
+    
     
 }
 #section-telas-jogo{
@@ -94,7 +101,8 @@ iframe{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 20%;
 }
 
 #section-logs{
@@ -115,6 +123,9 @@ iframe{
     align-items: center;
     justify-content: center;
     color: aliceblue;
+    height: auto;
+    gap: 10%;
+    padding: 40px;
 }
 
 footer{
@@ -130,6 +141,7 @@ footer{
 button{
     border: black solid 4px;
     border-radius: 5px;
+    padding: 10px;
     cursor: pointer;
 }
 
@@ -174,7 +186,7 @@ li{
 /* https://marchettomarcelo.github.io/pygame/ */
 
 :root {
-  --gradient: linear-gradient(45deg, purple, red, blue);
+  --gradient: linear-gradient(45deg, purple, rgb(220, 20, 52), blue);
 }
 
 body {
